--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button>Grid Size</button>
     <div class="container"></div>
     <script src="sketch.js"></script>
 </body>
