Rearrange html, main div and two divs

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button>Grid Size</button>
-    <div class="container"></div>
+    <div class="main-container">
+        <div> <button>Grid Size</button></div>
+        <div class="container"></div>
+    </div>
     <script src="sketch.js"></script>
 </body>
 </html>
